# site-sweeper

./: .gitignore  README.md  main.py  pyproject.toml
demo/: _demo_run.sh  demo.cast  demo.sh  record-demo.sh
demo/site/: index.html
demo/site/about/: index.html
demo/site/blog/post-one/: index.html
demo/site/blog/post-two/: index.html
demo/site/contact/: index.html
site_sweeper/: checks.py  cli.py  crawler.py  display.py  links.py  screenshots.py  sitemap.py
site_sweeper_cli/: checks.py  cli.py  crawler.py  display.py
